/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package mobileharness.infra.client.api;

option java_package = "com.google.devtools.mobileharness.infra.client.api.proto";
option java_outer_classname = "ServerLocatorProto";

// Represents the locator of a server.
message ServerLocator {
  reserved 1;
  oneof locator {
    GrpcServerLocator grpc_server_locator = 2;
    CloudServerLocator cloud_server_locator = 3;
  }
  AccessProxy access_proxy = 10;
}

message GrpcServerLocator {
  string server_grpc_target = 1;
}

// Represents a locator on Google Cloud.
message CloudServerLocator {
  string cloud_endpoint = 2;
}

// Proxy to access the server.
enum AccessProxy {
  ACCESS_PROXY_NONE = 0;
  GRPC_ROUTER = 1;
}
