/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package mobileharness.shared.util.comm.stub;

import "src/devtools/mobileharness/shared/util/comm/relay/proto/destination.proto";

option java_package = "com.google.devtools.mobileharness.shared.util.comm.stub";
option java_outer_classname = "StubConfigurationProto";

message ServerSpec {
  string target = 1;
  // For grpc, it is client api key.
  optional string client_security = 2;
}

// Direct target without any proxy.
message DirectTarget {
  ServerSpec server_spec = 1;
  // The transport has to be gRPC to use the relay destination.
  optional mobileharness.shared.util.comm.relay.Destination relay_destination =
      2;
}

enum Transport {
  GRPC = 0;
}

message StubConfiguration {
  Transport transport = 1;
  oneof target_configuration {
    DirectTarget direct_target = 2;
  }
}
